cilium_netpolicy_examples/cilium35/CiliumNetworkPolicy15.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-cross-cluster"
spec:
  description: "Allow x-wing in cluster1 to contact rebel-base in cluster2"
  endpointSelector:
    matchLabels:
      name: x-wing
      io.cilium.k8s.policy.cluster: cluster1
  egress:
  - toEndpoints:
    - matchLabels:
        name: rebel-base
        io.cilium.k8s.policy.cluster: cluster2

# The following policy illustrates how to allow particular pods to communicate between 
# two clusters. The cluster name refers to the name given via the --cluster-name agent option 
# or cluster-name ConfigMap option.
